Fixed category/product and search/product to have product attributes details. fixed spacing of the table.

--- a/upload/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/upload/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -745,3 +745,12 @@ h2.price {
     background-image: none;
     background-color: #df5c39;
 }
+
+table tr td:empty {
+    width: 50px;
+}
+
+table tr td {
+    padding-right: 10px;
+}
+
